tests/ui/associated-type-bounds/return-type-notation/path-unsatisfied.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/path-unsatisfied.rs:1:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: `*mut ()` cannot be sent between threads safely
  --> $DIR/path-unsatisfied.rs:23:12
   |
LL |     fn method() -> impl Sized {
   |                    ---------- within this `impl Sized`
...
LL |     test::<DoesntWork>();
   |            ^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
   |
   = help: within `impl Sized`, the trait `Send` is not implemented for `*mut ()`, which is required by `impl Sized: Send`
note: required because it appears within the type `impl Sized`
  --> $DIR/path-unsatisfied.rs:10:20
   |
LL |     fn method() -> impl Sized {
   |                    ^^^^^^^^^^
note: required by a bound in `test`
  --> $DIR/path-unsatisfied.rs:18:20
   |
LL | fn test<T: Trait>()
   |    ---- required by a bound in this function
LL | where
LL |     T::method(..): Send,
   |                    ^^^^ required by this bound in `test`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
